fix finetune pre-trained

--- a/Pre-trained Embeddings.ipynb
+++ b/Pre-trained Embeddings.ipynb
@@ -14,12 +14,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "id": "ce62dfce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/kelwa/anaconda3/envs/kaggle_torch/lib/python3.7/site-packages/torch/cuda/__init__.py:52: UserWarning: CUDA initialization: CUDA unknown error - this may be due to an incorrectly set up environment, e.g. changing env variable CUDA_VISIBLE_DEVICES after program start. Setting the available devices to be zero. (Triggered internally at  /pytorch/c10/cuda/CUDAFunctions.cpp:109.)\n",
+      "  return torch._C._cuda_getDeviceCount() > 0\n"
+     ]
+    }
+   ],
    "source": [
-    "import time\n",
+    "import time \n",
     "import torch.backends.cudnn as cudnn\n",
     "import torch.optim\n",
     "import torch.utils.data\n",
@@ -29,156 +38,9 @@
     "from models import Encoder, DecoderWithAttention\n",
     "from dataset import *\n",
     "from utils import *\n",
-    "from nltk.translate.bleu_score import corpus_bleu\n",
-    "\n",
-    "import numpy as np\n",
-    "import pickle\n",
-    "\n",
-    "from train import train, validate\n",
-    "\n",
-    "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
-    "\n",
-    "# training parameters\n",
-    "grad_clip = 5.  # clip gradients at an absolute value of\n",
-    "alpha_c = 1.  # regularization parameter for 'doubly stochastic attention', as in the paper\n",
-    "print_freq = 100  # print training/validation stats every __ batches\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "id": "c0f16606",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def fit(t_params, checkpoint=None, m_params=None):\n",
-    "\n",
-    "    # info\n",
-    "    data_name = t_params['data_name']\n",
-    "    imgs_path = t_params['imgs_path']\n",
-    "    df_path = t_params['df_path']\n",
-    "    vocab = t_params['vocab']\n",
-    "\n",
-    "    start_epoch = 0\n",
-    "    epochs_since_improvement = 0\n",
-    "    best_bleu4 = 0\n",
-    "    epochs = t_params['epochs']\n",
-    "    batch_size = t_params['batch_size']\n",
-    "    workers = t_params['workers']\n",
-    "    encoder_lr = t_params['encoder_lr']\n",
-    "    decoder_lr = t_params['decoder_lr']\n",
-    "    fine_tune_encoder = t_params['fine_tune_encoder']\n",
-    "    \n",
-    "    pretrained_embeddings = t_params['pretrained_embeddings']\n",
-    "    fine_tune_embeddings = t_params['fine_tune_embeddings']\n",
-    "    embeddings_matrix = m_params['embeddings_matrix']\n",
-    "\n",
-    "    # init / load checkpoint\n",
-    "    if checkpoint is None:\n",
-    "\n",
-    "        # getting hyperparameters\n",
-    "        attention_dim = m_params['attention_dim']\n",
-    "        embed_dim = m_params['embed_dim']\n",
-    "        decoder_dim = m_params['decoder_dim']\n",
-    "        encoder_dim = m_params['encoder_dim']\n",
-    "        dropout = m_params['dropout']\n",
-    "\n",
-    "        decoder = DecoderWithAttention(attention_dim=attention_dim,\n",
-    "                                      embed_dim=embed_dim,\n",
-    "                                      decoder_dim=decoder_dim,\n",
-    "                                      encoder_dim=encoder_dim,\n",
-    "                                      vocab_size=len(vocab),\n",
-    "                                      dropout=dropout)\n",
-    "        if pretrained_embeddings:\n",
-    "            decoder.load_pretrained_embeddings(torch.tensor(embeddings_matrix, dtype=torch.float32))\n",
-    "            decoder.fine_tune_embeddings(fine_tune=fine_tune_embeddings)\n",
-    "        \n",
-    "        decoder_optimizer = torch.optim.RMSprop(params=filter(lambda p:p.requires_grad, decoder.parameters()),\n",
-    "                                            lr=decoder_lr)\n",
-    "        \n",
-    "        encoder=Encoder()\n",
-    "        encoder.fine_tune(fine_tune_encoder)\n",
-    "        encoder_optimizer = torch.optim.RMSprop(params=filter(lambda p:p.requires_grad, encoder.parameters()),\n",
-    "                                            lr=encoder_lr) if fine_tune_encoder else None\n",
-    "    # load checkpoint\n",
-    "    else:\n",
-    "        checkpoint = torch.load(checkpoint)\n",
-    "        print('Loaded Checkpoint!!')\n",
-    "        start_epoch = checkpoint['epoch'] + 1\n",
-    "        print(f\"Starting Epoch: {start_epoch}\")\n",
-    "        epochs_since_improvement = checkpoint['epochs_since_imrovment']\n",
-    "        best_bleu4 = checkpoint['bleu-4']\n",
-    "        decoder = checkpoint['decoder']\n",
-    "        decoder_optimizer = checkpoint['deocder_optimizer']\n",
-    "        encoder = checkpoint['encoder']\n",
-    "        encoder_optimizer = checkpoint['encoder_optimizer']\n",
-    "        if fine_tune_encoder is True and encoder_optimizer is None:\n",
-    "            encoder.fine_tune(fine_tune_encoder)\n",
-    "            encoder_optimizer = torch.optim.RMSprop(params=filter(lambda p:p.requires_grad, encoder.parameters()),\n",
-    "                                                lr=encoder_lr)\n",
-    "    # move to gpu, if available\n",
-    "    decoder = decoder.to(device)\n",
-    "    encoder = encoder.to(device)\n",
-    "    \n",
-    "    # loss function\n",
-    "    criterion = nn.CrossEntropyLoss().to(device)\n",
-    "    \n",
-    "    # dataloaders\n",
-    "    transform = transforms.Compose([\n",
-    "        transforms.Resize(256),\n",
-    "        transforms.CenterCrop(224),\n",
-    "        transforms.ToTensor(),\n",
-    "        transforms.Normalize(mean=[0.485, 0.456, 0.406], std=[0.229, 0.224, 0.225]),\n",
-    "    ])\n",
-    "\n",
-    "    print('Loading Data')\n",
-    "    train_loader, val_loader = get_loaders(batch_size, imgs_path, df_path, transform, vocab, False ,workers)\n",
-    "    print('_'*50)\n",
-    "\n",
-    "    print('-'*20, 'Fitting', '-'*20)\n",
-    "    for epoch in range(start_epoch, epochs):\n",
-    "        \n",
-    "        # decay lr is there is no improvement for 8 consecutive epochs and terminate after 20\n",
-    "        if epochs_since_improvement == 20:\n",
-    "            print('No improvement for 20 consecutive epochs, terminating...')\n",
-    "            break\n",
-    "        if epochs_since_improvement > 0 and epochs_since_improvement % 8 == 0:\n",
-    "            adjust_learning_rate(decoder_optimizer, 0.8)\n",
-    "            if fine_tune_encoder:\n",
-    "                adjust_learning_rate(encoder_optimizer, 0.8)\n",
-    "        \n",
-    "        print('_'*50)\n",
-    "        print('-'*20, 'Training', '-'*20)\n",
-    "        # one epoch of training\n",
-    "        train(train_loader=train_loader,\n",
-    "            encoder=encoder,\n",
-    "            decoder=decoder,\n",
-    "            criterion=criterion,\n",
-    "            encoder_optimizer=encoder_optimizer,\n",
-    "            decoder_optimizer=decoder_optimizer,\n",
-    "            epoch=epoch)\n",
-    "        \n",
-    "        # one epoch of validation\n",
-    "        print('-'*20, 'Validation', '-'*20)\n",
-    "        recent_bleu4 = validate(val_loader=val_loader,\n",
-    "            encoder=encoder,\n",
-    "            decoder=decoder,\n",
-    "            criterion=criterion,\n",
-    "            vocab=vocab)\n",
-    "\n",
-    "        \n",
-    "        # check for improvement\n",
-    "        is_best = recent_bleu4 > best_bleu4\n",
-    "        best_bleu4 = max(recent_bleu4, best_bleu4)\n",
-    "        if not is_best:\n",
-    "            epochs_since_improvement += 1\n",
-    "            print(f'\\nEpochs since last improvement: {epochs_since_improvement,}')\n",
-    "        else:\n",
-    "            # reset\n",
-    "            epochs_since_improvement = 0\n",
-    "        \n",
-    "        save_checkpoint(data_name, epoch, epochs_since_improvement, encoder, decoder, encoder_optimizer,\n",
-    "            decoder_optimizer, recent_bleu4, is_best)"
+    "from train import *\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "from os import path as osp"
    ]
   },
   {
@@ -470,7 +332,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
