--- a/Arabic.ipynb
+++ b/Arabic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "004282d1",
+   "id": "b4366e4d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "d189aad1",
+   "id": "4034c69e",
    "metadata": {},
    "outputs": [
     {
@@ -46,7 +46,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "dea4ceed",
+   "id": "85b5207b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "d69ff1b5",
+   "id": "b8ce76f9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,278 +120,168 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4b5419ba",
+   "execution_count": 17,
+   "id": "d7a302e3",
    "metadata": {},
    "outputs": [],
    "source": [
     "DATA_NAME = 'flickr8k_ar'\n",
     "\n",
     "# local\n",
-    "# DATA_JSON_PATH = 'data.json'\n",
-    "# IMGS_PATH = 'flickr/Images/'\n",
+    "DATA_JSON_PATH = 'ar_data.json'\n",
+    "IMGS_PATH = 'flickr/Images/'\n",
     "# kaggle paths\n",
     "# DATA_JSON_PATH = '/kaggle/working/Image-Captioning/data.json'\n",
     "# IMGS_PATH = '../input/flickr8kimagescaptions/flickr8k/images/'\n",
     "#colab\n",
-    "DATA_JSON_PATH = 'Image-Captioning/data.json'\n",
-    "IMGS_PATH = 'flickr8k/images/'"
+    "# DATA_JSON_PATH = 'Image-Captioning/data.json'\n",
+    "# IMGS_PATH = 'flickr8k/images/'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "58412375",
+   "execution_count": 30,
+   "id": "a4b1a677",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>caption</th>\n",
-       "      <th>split</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1000268201_693b08cb0e.jpg</td>\n",
-       "      <td>طفلة صغيرة تتسلق إلى مسرح خشبي</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1000268201_693b08cb0e.jpg</td>\n",
-       "      <td>طفلة صغيرة تتسلق الدرج إلى منزلها</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1000268201_693b08cb0e.jpg</td>\n",
-       "      <td>فتاة صغيرة في ثوب وردي تذهب إلى المقصورة الخشبية</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1001773457_577c3a7d70.jpg</td>\n",
-       "      <td>كلب أسود وكلب ثلاثي الألوان يلعبان مع بعضهما ا...</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1001773457_577c3a7d70.jpg</td>\n",
-       "      <td>كلب أسود وكلب أبيض ببقع بنية يحدقان في بعضهما ...</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                   file_name  \\\n",
-       "0  1000268201_693b08cb0e.jpg   \n",
-       "1  1000268201_693b08cb0e.jpg   \n",
-       "2  1000268201_693b08cb0e.jpg   \n",
-       "3  1001773457_577c3a7d70.jpg   \n",
-       "4  1001773457_577c3a7d70.jpg   \n",
-       "\n",
-       "                                             caption  split  \n",
-       "0                     طفلة صغيرة تتسلق إلى مسرح خشبي  train  \n",
-       "1                  طفلة صغيرة تتسلق الدرج إلى منزلها  train  \n",
-       "2   فتاة صغيرة في ثوب وردي تذهب إلى المقصورة الخشبية  train  \n",
-       "3  كلب أسود وكلب ثلاثي الألوان يلعبان مع بعضهما ا...  train  \n",
-       "4  كلب أسود وكلب أبيض ببقع بنية يحدقان في بعضهما ...  train  "
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import pandas as pd\n",
-    "\n",
-    "df = pd.read_csv(\"ar_data.csv\")\n",
-    "df.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "8bcaf4d9",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>file_name</th>\n",
-       "      <th>caption</th>\n",
-       "      <th>split</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10630</th>\n",
-       "      <td>2969380952_9f1eb7f93b.jpg</td>\n",
-       "      <td>رجل يسير  في طريق السباق</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16941</th>\n",
-       "      <td>3437693401_202afef348.jpg</td>\n",
-       "      <td>كلب أبيض وكلب بني يلعب بعنف</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16083</th>\n",
-       "      <td>3380407617_07b53cbcce.jpg</td>\n",
-       "      <td>طفل يقف في الثلج</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13762</th>\n",
-       "      <td>3223709894_97824ba76f.jpg</td>\n",
-       "      <td>كلب رقيق يجري على العشب</td>\n",
-       "      <td>val</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3302</th>\n",
-       "      <td>2151300603_248a9fe715.jpg</td>\n",
-       "      <td>امرأة جالسة في الخلفية على طاولة</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>20001</th>\n",
-       "      <td>3640329164_20cb245fd5.jpg</td>\n",
-       "      <td>راكب الأمواج يركب الأمواج</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7316</th>\n",
-       "      <td>2616284322_b13e7c344e.jpg</td>\n",
-       "      <td>الكلب صاحب الرقم أربعة أمام الكلاب الأخرى</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>16822</th>\n",
-       "      <td>3430782104_34da558eba.jpg</td>\n",
-       "      <td>فتاة على حصان يحاول التقاط ثور بحبل</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4038</th>\n",
-       "      <td>2258662398_2797d0eca8.jpg</td>\n",
-       "      <td>طفل على لوح ركوب الأمواج يركب موجة صغيرة</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12355</th>\n",
-       "      <td>3122497129_d08f5729b8.jpg</td>\n",
-       "      <td>كلبان على الثلج يلعبان برباط أحمر</td>\n",
-       "      <td>train</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "                       file_name                                     caption  \\\n",
-       "10630  2969380952_9f1eb7f93b.jpg                    رجل يسير  في طريق السباق   \n",
-       "16941  3437693401_202afef348.jpg                 كلب أبيض وكلب بني يلعب بعنف   \n",
-       "16083  3380407617_07b53cbcce.jpg                            طفل يقف في الثلج   \n",
-       "13762  3223709894_97824ba76f.jpg                     كلب رقيق يجري على العشب   \n",
-       "3302   2151300603_248a9fe715.jpg            امرأة جالسة في الخلفية على طاولة   \n",
-       "20001  3640329164_20cb245fd5.jpg                   راكب الأمواج يركب الأمواج   \n",
-       "7316   2616284322_b13e7c344e.jpg   الكلب صاحب الرقم أربعة أمام الكلاب الأخرى   \n",
-       "16822  3430782104_34da558eba.jpg         فتاة على حصان يحاول التقاط ثور بحبل   \n",
-       "4038   2258662398_2797d0eca8.jpg    طفل على لوح ركوب الأمواج يركب موجة صغيرة   \n",
-       "12355  3122497129_d08f5729b8.jpg           كلبان على الثلج يلعبان برباط أحمر   \n",
-       "\n",
-       "       split  \n",
-       "10630  train  \n",
-       "16941  train  \n",
-       "16083  train  \n",
-       "13762    val  \n",
-       "3302   train  \n",
-       "20001  train  \n",
-       "7316   train  \n",
-       "16822    NaN  \n",
-       "4038   train  \n",
-       "12355  train  "
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.sample(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "87e735e8",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "build_vocabulary() missing 1 required positional argument: 'sentence_list'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-12-6e00980b41e1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mvocab\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mVocabulary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mvocab\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbuild_vocabulary\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m: build_vocabulary() missing 1 required positional argument: 'sentence_list'"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████| 24000/24000 [00:00<00:00, 435411.83it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5788"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "vocab = Vocabulary()\n",
-    "vocab.build_vocabulary()"
+    "max_seq = 30\n",
+    "vocab = build_vocab(DATA_JSON_PATH, max_seq=max_seq)\n",
+    "vocab_len = len(vocab); vocab_len"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "ff6df2d0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "([0, 1, 2, 3, 4, 5, 6, 7, 8, 9],\n",
+       " ['<pad>',\n",
+       "  '<sos>',\n",
+       "  '<eos>',\n",
+       "  '<unk>',\n",
+       "  'طفلة',\n",
+       "  'صغيرة',\n",
+       "  'تتسلق',\n",
+       "  'إلى',\n",
+       "  'كلب',\n",
+       "  'أسود'])"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(vocab.itos.keys())[:10], list(vocab.itos.values())[:10]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "6fb11e8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_params = {\n",
+    "    'data_name': DATA_NAME,\n",
+    "    'imgs_path': IMGS_PATH,\n",
+    "    'df_path': DATA_JSON_PATH,\n",
+    "    'vocab': vocab,\n",
+    "    'epochs': epochs,\n",
+    "    'batch_size': batch_size,\n",
+    "    'workers': workers,\n",
+    "    'decoder_lr': decoder_lr,\n",
+    "    'encoder_lr': encoder_lr,\n",
+    "    'fine_tune_encoder': fine_tune_encoder,\n",
+    "    'pretrained_embeddings': pretrained_embeddings,\n",
+    "}\n",
+    "\n",
+    "m_params = {\n",
+    "    'attention_dim': attention_dim,\n",
+    "    'embed_dim': emb_dim,\n",
+    "    'decoder_dim': decoder_dim,\n",
+    "    'encoder_dim': encoder_dim,\n",
+    "    'dropout': dropout\n",
+    "}\n",
+    "\n",
+    "logger_dic = {\n",
+    "    'decoder_lr': decoder_lr,\n",
+    "    'encoder_lr': encoder_lr,\n",
+    "    'fine_tune_encoder': fine_tune_encoder,\n",
+    "    'pretrained_embeddings': pretrained_embeddings,\n",
+    "    'max_seq_length': max_seq,\n",
+    "    'vocab_size': vocab_len,\n",
+    "    'enocder': 'resnet101',\n",
+    "    'dropout': dropout,\n",
+    "    'attention_dim': attention_dim,\n",
+    "    'embed_dim': emb_dim,\n",
+    "    'decoder_dim': decoder_dim,\n",
+    "    'encoder_dim': encoder_dim \n",
+    "    \n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "id": "97209564",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'data_name': 'flickr8k_ar',\n",
+       " 'imgs_path': 'flickr/Images/',\n",
+       " 'df_path': 'ar_data.json',\n",
+       " 'vocab': <dataset.Vocabulary at 0x7efeedbbe890>,\n",
+       " 'epochs': 30,\n",
+       " 'batch_size': 256,\n",
+       " 'workers': 2,\n",
+       " 'decoder_lr': 0.0004,\n",
+       " 'encoder_lr': 0.0001,\n",
+       " 'fine_tune_encoder': False,\n",
+       " 'pretrained_embeddings': False}"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "t_params"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c6db5ebf",
+   "id": "8d8e8ebf",
    "metadata": {},
    "outputs": [],
    "source": []
