--- a/others/gru-no-teacher-forcing.ipynb
+++ b/others/gru-no-teacher-forcing.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,9 +56,9 @@
     "import time, math, random\n",
     "\n",
     "from datasets import build_vocab, get_loaders\n",
-    "from models import EncoderCNN\n",
+    "# from models import EncoderCNN\n",
     "from model2 import Img2Seq, DecoderRNN\n",
-    "from utils import train, evaluate, epoch_time, print_examples, predict_test, print_scores\n",
+    "# from utils import  evaluate, epoch_time, print_examples, predict_test, print_scores\n",
     "from utils import get_test_data\n",
     "\n",
     "%matplotlib inline"
@@ -66,7 +66,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train(model, iterator, optimizer, criterion, clip):\n",
+    "    \n",
+    "    model.train()\n",
+    "    \n",
+    "    epoch_loss = 0\n",
+    "    \n",
+    "    for idx, (imgs, captions) in tqdm(\n",
+    "        enumerate(iterator), total=len(iterator), leave=False\n",
+    "    ):\n",
+    "        \n",
+    "        optimizer.zero_grad()\n",
+    "        \n",
+    "        imgs = imgs.to(model.device)\n",
+    "        captions = captions.to(model.device)\n",
+    "        \n",
+    "        output = model(imgs, captions)\n",
+    "        \n",
+    "        #output = [trg len, batch size, output dim]\n",
+    "        output_dim = output.shape[-1]\n",
+    "        #flattening the output and target + ignoring <sos>\n",
+    "        output = output[1:].view(-1, output_dim)\n",
+    "        trg = captions[1:].view(-1)\n",
+    "        \n",
+    "        #trg = [(trg len -1) * batch size]\n",
+    "        #output = [(trg len -1) * batch size, output dim]\n",
+    "        \n",
+    "        \n",
+    "        loss = criterion(output, trg)\n",
+    "        loss.backward()\n",
+    "        \n",
+    "        torch.nn.utils.clip_grad_norm_(model.parameters(), clip)\n",
+    "        \n",
+    "        optimizer.step()\n",
+    "        \n",
+    "        epoch_loss += loss.item()\n",
+    "        \n",
+    "    return epoch_loss / len(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +154,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class MyCollate:\n",
+    "    def __init__(self, pad_idx):\n",
+    "        self.pad_idx = pad_idx\n",
+    "        \n",
+    "    def __call__(self, batch):\n",
+    "        imgs = [item[0].unsqueeze(0) for item in batch]\n",
+    "        imgs = torch.cat(imgs, dim=0)\n",
+    "        targets = [item[1] for item in batch]\n",
+    "        targets = pad_sequence(targets, batch_first=False, padding_value=pad_idx)\n",
+    "        \n",
+    "#         print(imgs.shape)\n",
+    "#         print(targets.shape)\n",
+    "        return imgs, targets\n",
+    "\n",
+    "class EncoderCNN(nn.Module):\n",
+    "    def __init__(self, hid_dim, dropout, train_cnn=False):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.hid_dim = hid_dim        \n",
+    "        self.train_cnn = train_cnn\n",
+    "        \n",
+    "        self.inception = models.inception_v3(pretrained=True, aux_logits=False)\n",
+    "        self.inception.fc = nn.Linear(self.inception.fc.in_features, hid_dim)\n",
+    "        \n",
+    "        self.relu = nn.ReLU()\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, images):\n",
+    "        features = self.dropout(self.relu(self.inception(images)))\n",
+    "        return features\n",
+    "    \n",
+    "class DecoderRNN(nn.Module):\n",
+    "    def __init__(self, emb_dim, hid_dim, vocab_sz, dropout):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.hid_dim = hid_dim\n",
+    "        self.vocab_sz = vocab_sz\n",
+    "        \n",
+    "        self.embedding = nn.Embedding(vocab_sz, emb_dim)\n",
+    "        \n",
+    "        # GRU: inputs-> [embeddings + context], output -> hidden, output\n",
+    "        self.rnn = nn.GRU(emb_dim+hid_dim, hid_dim)\n",
+    "        \n",
+    "        # FC: inputs:-> [embeddings + context + output]\n",
+    "        self.fc_out = nn.Linear(emb_dim + hid_dim*2, vocab_sz)\n",
+    "        \n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "        \n",
+    "    def forward(self, input, hidden, context):\n",
+    "        #input = [batch size]\n",
+    "        #hidden = [1, batch size, hid dim]\n",
+    "        #context = [1, batch size, hid dim]\n",
+    "        \n",
+    "        input = input.unsqueeze(0)\n",
+    "        #input = [1, batch size]\n",
+    "        \n",
+    "        embedded = self.dropout(self.embedding(input))\n",
+    "        #embedded = [1, batch size, emb dim]\n",
+    "        \n",
+    "#         print(f'Context shape {context.shape}')\n",
+    "#         print(f'embeded shape {embedded.shape}')\n",
+    "        \n",
+    "        emb_con = torch.cat((embedded, context), dim=2)\n",
+    "        #emb_con = [1, batch size, emb_dim + hid_dim]\n",
+    "        \n",
+    "#         print(f\"Hidden shape {hidden.shape}\")\n",
+    "#         print(f\"embedded shape {embedded.shape}\")\n",
+    "#         print(f\"context shape {context.shape}\")\n",
+    "#         print(f\"emb_con shape {emb_con.shape}\")\n",
+    "#         print('_'*22)\n",
+    "        \n",
+    "        output, hidden = self.rnn(emb_con, hidden)\n",
+    "        #output = [1, batch size, hid dim] -> seq len and n directions = 1\n",
+    "        #hidden = [1, batch size, hid dim] -> n layers and n directions =1\n",
+    "        \n",
+    "        output = torch.cat((embedded.squeeze(0), hidden.squeeze(0), context.squeeze(0)), dim=1)\n",
+    "        #output = [batch size, emb_dim + hid_dim*2]\n",
+    "        \n",
+    "        predictions = self.fc_out(output)\n",
+    "        #predictions = [batch size, vocab size]\n",
+    "        \n",
+    "        return predictions, hidden\n",
+    "    \n",
+    "###\n",
+    "### No teacher forcing for now\n",
+    "###\n",
+    "class Img2Seq(nn.Module):\n",
+    "    def __init__(self, encoder, decoder, device):\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        self.encoder = encoder\n",
+    "        self.decoder = decoder\n",
+    "        self.device = device\n",
+    "        \n",
+    "        assert self.encoder.hid_dim == self.decoder.hid_dim,\\\n",
+    "            'The hid dim of the context vector must equal the hid dim of the decoder !!'\n",
+    "            \n",
+    "    def forward(self, img, trg):\n",
+    "        #src = [batch size, 3, 224, 224]\n",
+    "        #trg = [trg len, batch size]\n",
+    "        \n",
+    "        batch_size = trg.shape[1]\n",
+    "        trg_len = trg.shape[0]\n",
+    "        trg_vocab_size = self.decoder.vocab_sz\n",
+    "        \n",
+    "        outputs = torch.zeros(trg_len, batch_size, trg_vocab_size).to(self.device)\n",
+    "        \n",
+    "        context = self.encoder(img)\n",
+    "        context = context.unsqueeze(0)\n",
+    "        hidden = context\n",
+    "        \n",
+    "        input = trg[0,:]\n",
+    "        \n",
+    "        for t in range(1, trg_len):\n",
+    "            output, hidden = self.decoder(input, hidden, context)\n",
+    "            \n",
+    "            outputs[t] = output\n",
+    "            \n",
+    "            top1 = output.argmax(1)\n",
+    "            \n",
+    "            input = top1\n",
+    "            \n",
+    "        return outputs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -146,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -422,6 +598,37 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "type object 'Vocabulary' has no attribute 'tokenize_en'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-21-3770b5cc1f47>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtest_dict\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mget_test_data\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mDF_PATH\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mpreds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrgs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpredict_test\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtest_dict\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mIMAGES_PATH\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmodel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mvocab\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mn_images\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1000\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint_scores\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpreds\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mtrgs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m/run/media/kelwa/DEV/GP/Image-Captioning/others/utils.py\u001b[0m in \u001b[0;36mget_test_data\u001b[0;34m(df_path)\u001b[0m\n\u001b[1;32m     88\u001b[0m         \u001b[0mlist_tokens\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     89\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0msent\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mtest_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mtest_df\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'file_name'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mimg_id\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'caption'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvalues\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 90\u001b[0;31m             \u001b[0mlist_tokens\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mVocabulary\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtokenize_en\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     91\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     92\u001b[0m         \u001b[0mtest_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mimg_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist_tokens\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mAttributeError\u001b[0m: type object 'Vocabulary' has no attribute 'tokenize_en'"
+     ]
+    }
+   ],
+   "source": [
+    "test_dict = get_test_data(DF_PATH)\n",
+    "preds, trgs = predict_test(test_dict, IMAGES_PATH, model, vocab, n_images=1000)\n",
+    "print_scores(preds, trgs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -440,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
